# lupin

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README_DOCKER.md  common_components.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml  claude-code-review.yml  claude.yml
app/: dependencies.py  models.py  room_manager.py  routes.py  session_manager.py  version.py  websocket_handler.py
app/api/: __init__.py  config_routes.py  health_routes.py  monitoring_routes.py  version_routes.py
app/config/: __init__.py  config_loader.py  constants.py  runtime_config.py  schemas.py
app/events/: __init__.py  event_bus.py  game_events.py
app/exceptions/: __init__.py  game_exceptions.py
app/games/: __init__.py  base.py  game_factory.py  game_registry.py  janggi_manager.py  omok.py  omok_manager.py
app/managers/: __init__.py  connection_manager.py  room_lifecycle_manager.py
app/monitoring/: __init__.py  config_metrics.py  dashboard.py  metrics.py  performance.py
app/services/: game_service.py
app/utils/: error_handler.py  player_utils.py  room_timer.py
config/: default.yaml  development.yaml  production.yaml
config/games/: omok.yaml
static/: package-lock.json  package.json  tsconfig.json
static/css/: base.css  chat.css  components.css  excel.css  modals.css  notifications.css  responsive.css
templates/: base.html  error.html  example_new_game.html  index.html  janggi.html  omok.html  slither.html
tests/: conftest.py  scenarios.md
(+35 files in other folders)
